# ROS2_multi_robot_sim

./: .gitmodules  README.md
docker/: docker-compose.wsl.yml  docker-compose.yml  ubuntu.dockerfile  wsl.dockerfile
src/multi_robot_sim/urdf/: turtlebot3_waffle.urdf.xacro
src/src/aws-robomaker-hospital-world/launch/: hospital.launch.py
src/src/multi_robot_sim/configs/: humans_waypoint_config2.yaml  nav2_params.yaml  shared_costmap_rviz.rviz
src/src/multi_robot_sim/launch/: single_robot_nav_launch.py
src/src/multi_robot_sim/worlds/: aws_hospital_humans_new_plugin.world
workspace/src/aws-robomaker-hospital-world/launch/: hospital.launch.py  main.launch.py
workspace/src/gazebo_sfm_plugin/launch/: cafe_ros2.launch.py
workspace/src/multi_robot_sim/: CMakeLists.txt  package.xml
workspace/src/multi_robot_sim/configs/: nav2_params.yaml  robot_setup_6.json  shared_costmap_rviz.rviz
workspace/src/multi_robot_sim/launch/: single_robot_nav_launch.py  test_multi_robot_launch.py
